FAQ overlap issue fixed

--- a/src/output.css
+++ b/src/output.css
@@ -249,6 +249,12 @@
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
+  .z-0 {
+    z-index: 0;
+  }
+  .z-10 {
+    z-index: 10;
+  }
   .z-50 {
     z-index: 50;
   }
